# ay_vision

./: .gitignore  CMakeLists.txt
ay_vision/: CMakeLists.txt  README.md  manifest.xml
ay_vision/config/: segm_obj1.yaml  usbcam1f1.yaml  usbcam1f2.yaml  usbcam2fay10a.yaml  usbcam2fay10a_l.yaml  usbcam2fay10a_r.yaml  usbcam2fay11.yaml  usbcam2fay11a_l.yaml  usbcam2fay11a_local_l.yaml  usbcam2fay11a_local_r.yaml  usbcam2fay11a_r.yaml  usbcam2fay13a_l.yaml  usbcam2fay13a_r.yaml
ay_vision/include/ay_vision/: ros_util.h  vision_util.h
ay_vision/launch/: cv_usb0.launch  record_video_2fay11.launch  segm_obj2.launch  segm_obj3.launch  segm_obj_rs.launch
ay_vision/launch/color_detector/: color_detector2.launch  human_demo.launch  human_demo_l.launch
ay_vision/launch/usb_stereo_calib/: usb_stereo_calib.launch  usb_stereo_calib2fay11.launch  usb_stereo_calib2fay11.sh  usb_stereo_calib2fay12.sh  usb_stereo_calib2s1.launch  usb_stereo_calib2s2.launch  usb_stereo_calib2s2f.launch  usb_stereo_calib4g1.launch
ay_vision/launch/visual_skin/: visual_skin_1f1.launch  visual_skin_2f1.launch  visual_skin_2fay10a.launch  visual_skin_2fay11.launch  visual_skin_2fay11a2.launch  visual_skin_2fay11a_local.launch  visual_skin_2fay13a2.launch  visual_skin_2fay22.launch  visual_skin_4g1.launch
ay_vision/scripts/: cam_info.py  mjpg_stream.sh
ay_vision/src/: blob_tracker2.cpp  prox_vision.cpp  rt_pose_estimator.cpp  segm_obj.cpp
ay_vision/src_ros/: ros_util.cpp  segm_obj_node.cpp  visual_skin_node2.cpp  viz_util.cpp
ay_vision_adv/: CMakeLists.txt  README.md  manifest.xml
ay_vision_adv/config/: aypi10_8080_vga.yaml  cam0.yaml  segm_obj1.yaml
ay_vision_adv/include/ay_vision_adv/: color_detector.h  edge_fit.h  segm_obj.h  viz_util.h
ay_vision_adv/launch/: cv_usb0.launch  htmlstream2ros.launch  record_video_2fay11.launch  segm_obj.launch  segm_obj2.launch  segm_obj3.launch  segm_obj_rs.launch
ay_vision_adv/launch/color_detector/: color_detector.launch  color_detector2.launch  human_demo.launch  human_demo_l.launch
ay_vision_adv/launch/usb_stereo_calib/: usb_stereo_calib.launch  usb_stereo_calib2fay11.launch  usb_stereo_calib2fay11.sh  usb_stereo_calib2fay12.sh  usb_stereo_calib2s1.launch  usb_stereo_calib2s2.launch  usb_stereo_calib2s2f.launch  usb_stereo_calib4g1.launch
ay_vision_adv/src/: color_detector.cpp  edge_fit.cpp  flow_finder.cpp  rt_depthscene.cpp  rt_pose_estimator.cpp  segm_obj.cpp
ay_vision_adv/src_ros/: color_detector_node.cpp  disp_rostime.cpp  record_video_node.cpp  segm_obj_node.cpp  viz_util.cpp
ay_vision_msgs/: README.md  manifest.xml
ay_vision_msgs/msg/: ColDetVizPrimitive.msg  SegmObj.msg
config/: segm_obj1.yaml  usbcam1f1.yaml  usbcam2f1.yaml  usbcam2fay11.yaml  usbcam2fay11a_l.yaml  usbcam2fay11a_r.yaml  usbcam2fay12_calib1.yaml  usbcam2fay12_calib2.yaml  usbcam2fay12a_l.yaml  usbcam2fay12a_r.yaml  usbcam2fay21.yaml  usbcam2s2.yaml
include/ay_vision/: edge_fit.h  rt_depthscene.h  rt_pose_estimator.h  segm_obj.h
launch/: htmlstream2ros.launch  segm_obj.launch
launch/color_detector/: color_detector.launch
launch/visual_skin/: visual_skin_1f2.launch  visual_skin_2fay10a2.launch  visual_skin_2fay11a2.launch  visual_skin_2fay12.launch  visual_skin_2fay12a2.launch  visual_skin_2fay21.launch
src/: color_detector.cpp  edge_fit.cpp  flow_finder.cpp  rt_depthscene.cpp  rt_pose_estimator.cpp  usb_stereo.cpp  vision_util.cpp
src_ros/: color_detector_node.cpp  cv_usb_node.cpp  segm_obj_node.cpp  visual_skin_node2.cpp  viz_util.h
